--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "dev": "webpack serve --mode=development"
   },
   "dependencies": {
+    "@okta/okta-auth-js": "^4.7.1",
+    "@okta/okta-react": "^4.1.0",
     "axios": "^0.21.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
