updating changes from base website

--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
   "dependencies": {
     "@okta/okta-auth-js": "^4.7.1",
     "@okta/okta-react": "^4.1.0",
+    "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
@@ -36,7 +39,9 @@
     "css-loader": "^5.0.2",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.2.0",
-    "lodash": "^4.17.20",
+    "less": "^4.1.1",
+    "less-loader": "^8.0.0",
+    "lodash": "^4.17.21",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.23.0",
